# crisis-feed

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260228_0001_init_users_alerts.py  20260228_0002_add_user_role.py
backend/app/: __init__.py  database.py  ingestion.py  main.py  models.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/routes/: __init__.py  alerts.py  auth.py  system.py
backend/app/core/: config.py  middleware.py  security.py
backend/app/db/: __init__.py  base.py  database.py  redis.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  alerts.py  auth.py  common.py  ingestion.py
backend/app/scripts/: __init__.py  bootstrap_admin.py  seed_alerts.py
backend/app/services/: __init__.py  alert_service.py  auth_service.py  ingestion_queue.py  realtime_events.py
backend/app/workers/: __init__.py  alerts_ingestion_worker.py
backend/tests/: conftest.py  test_ingestion_queue.py  test_realtime_events.py  test_request_context.py  test_security.py  test_system_routes.py
frontend/: .dockerignore  Dockerfile  middleware.ts  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/types/: env.d.ts
