[project]
name = "georisk-monitor-backend"
version = "0.1.0"
description = "GeoRisk Monitor backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "sqlalchemy>=2.0.43,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.16.5,<2.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-jose[cryptography]>=3.5.0,<4.0.0",
  "redis>=6.4.0,<7.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9.0.0",
  "pytest-asyncio>=1.1.0,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "ruff>=0.12.10,<1.0.0",
  "mypy>=1.17.1,<2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
