[project]
name = "crisis-feed-backend"
version = "0.1.0"
description = "Crisis Feed backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.116.0,<1.0.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1,<1.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = ["ruff>=0.12.10,<1.0.0", "mypy>=1.17.1,<2.0.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["feedparser", "feedparser.*"]
ignore_missing_imports = true
